--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^6.19.0",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "graphql": "^16.12.0",
     "jsonwebtoken": "^9.0.2",
@@ -31,6 +32,7 @@
     "type-graphql": "^2.0.0-rc.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "prisma": "^6.19.0",
